Tuning blog layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,10 @@
 layout: blog
 ---
 
-
-
-				<h2>
-					<a href="{{%20page.url%20}}">{{ page.title }}</a>
-				</h2><small>{{ page.date | date_to_string }}</small>
-				<div class="post">
-					{{ content }}
-				</div>
-
+<h2>
+	<a href="{{%20page.url%20}}">{{ page.title }}</a>
+</h2>
+<small>{{ page.date | date_to_string }}</small>
+<div class="post">
+	{{ content }}
+</div>
