Styled blog. Add missing about page.

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -38,41 +38,6 @@
 			</div>
 			<div id="sidebar">
 				<ul>
-					<li class="pagenav">
-						<h2>
-							Pages
-						</h2>
-						<ul>
-							<li class="page_item page-item-2">
-								<a href="http://ambientideas.com/blog/index.php/about/" title="About">About</a>
-							</li>
-						</ul>
-					</li>
-					<li class="categories">
-						<h2>
-							Categories
-						</h2>
-						<ul>
-							<li class="cat-item cat-item-61">
-								<a href="http://ambientideas.com/blog/index.php/category/cryptography/" title="View all posts filed under Cryptography">Cryptography</a> (1)
-							</li>
-							<li class="cat-item cat-item-68">
-								<a href="http://ambientideas.com/blog/index.php/category/game-theory/" title="View all posts filed under Game Theory">Game Theory</a> (1)
-							</li>
-							<li class="cat-item cat-item-36">
-								<a href="http://ambientideas.com/blog/index.php/category/git/" title="View all posts filed under Git">Git</a> (4)
-							</li>
-							<li class="cat-item cat-item-42">
-								<a href="http://ambientideas.com/blog/index.php/category/maven/" title="View all posts filed under Maven">Maven</a> (4)
-							</li>
-							<li class="cat-item cat-item-53">
-								<a href="http://ambientideas.com/blog/index.php/category/presentations/" title="View all posts filed under Presentations">Presentations</a> (13)
-							</li>
-							<li class="cat-item cat-item-1">
-								<a href="http://ambientideas.com/blog/index.php/category/programming/" title="View all posts filed under Programming">Programming</a> (150)
-							</li>
-						</ul>
-					</li>
 					<li id="linkcat-38" class="linkcat">
 						<h2>
 							Network
@@ -116,44 +81,16 @@
 						</h2>
 						<ul class='xoxo blogroll'>
 							<li>
-								<a href="http://delicious.com/matthew.mccullough" rel="me" target="_blank">Delicious</a>
-							</li>
-							<li>
-								<a href="http://www.icalx.com/html/programr/year.php?cal=Denver+Developer+Events&amp;getdate=20090111" rel="me" target="_blank">Denver Java Events</a>
-							</li>
-							<li>
-								<a href="http://www.denveropensource.org" rel="me" target="_blank">Denver Open Source Users Group</a>
+								<a href="http://pinboard.in/u/matthew.mccullough" rel="me" target="_blank">Bookmarks</a>
 							</li>
 							<li>
 								<a href="http://github.com/matthewmccullough/" rel="me" target="_blank">GitHub</a>
 							</li>
 							<li>
-								<a href="http://www.icalx.com/html/programr/year.php?cal=Java+Conferences+%26+Speaking+Events&amp;getdate=20090111" rel="me" target="_blank">Global Java Conferences</a>
-							</li>
-							<li>
-								<a href="http://www.rockyradar.com" target="_blank">Rocky Radar</a>
-							</li>
-							<li>
 								<a href="http://www.slideshare.net/matthewmccullough" rel="me" target="_blank">Slideshare</a>
 							</li>
-						</ul>
-					</li>
-					<li>
-						<h2>
-							Meta
-						</h2>
-						<ul>
 							<li>
-								<a href="http://ambientideas.com/blog/wp-login.php">Log in</a>
-							</li>
-							<li>
-								<a href="http://validator.w3.org/check/referer" title="This page validates as XHTML 1.0 Transitional">Valid <abbr title="eXtensible HyperText Markup Language">XHTML</abbr></a>
-							</li>
-							<li>
-								<a href="http://gmpg.org/xfn/"><abbr title="XHTML Friends Network">XFN</abbr></a>
-							</li>
-							<li>
-								<a href="http://wordpress.org/" title="Powered by WordPress, state-of-the-art semantic personal publishing platform.">WordPress</a>
+								<a href="http://www.speakerdeck.com/matthewmccullough" rel="me" target="_blank">Speakerdeck</a>
 							</li>
 						</ul>
 					</li>
